crates/compiler/src/tests/e2e/good/0303_enum_option_match_generic/main.gom
enum Option[T] {
    Some(T),
    None,
}

fn unwrap_or[T](opt: Option[T], default: T) -> T {
    match opt {
        Option::Some(v) => v,
        Option::None => default,
    }
}

fn main() {
    let a: Option[int32] = Option::Some(42);
    let b: Option[int32] = Option::None;
    let x = unwrap_or(a, 0);
    let y = unwrap_or(b, 99);
    println((x).to_string());
    println((y).to_string());
}
