crates/compiler/src/tests/e2e/bad/0060_derive_to_string_generic_enum/main.gom
#[derive(ToString)]
enum Option[T] {
    Some(T),
    None,
}

fn main() {
    let a: Option[int32] = Option::Some(42);
    let b: Option[int32] = Option::None;
    println(a.to_string());
    println(b.to_string());
}
